Adjust Video Container Interaction

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-video-container.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-video-container.scss
@@ -128,6 +128,9 @@ $background-color_4: var( --dm-video-color-primary );
     .pause-icon {
       display: none;
     }
+    > .show-pause {
+      z-index: 99;
+    }
 
     &:hover {
       > .show-play, > .show-pause {
