--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
@@ -16,6 +16,7 @@
 
   > .popup-content {
     @include flex-center();
+    box-sizing: border-box;
     height: 100%;
     padding: var( --dm-spacing-secondary );
     position: relative;
@@ -25,21 +26,31 @@
     animation-delay: 0.2s !important;
     transition-delay: 0.2s !important;
 
-    > * {
-      box-shadow: 0px 2px 7px 4px rgba( var( --dm-color-black-rgb ), 0.3);
-    }
-
      img {
       width: auto;
       max-width: 100%;
       height: auto;
-      max-height: calc(100vh - var( --dm-spacing-secondary )*2);
+      max-height: calc(100vh - var( --dm-spacing-secondary ) * 2);
       cursor: zoom-in;
       transition: all 0.3s ease-in-out;
     }
 
     > .slider {
       overflow: hidden;
+      width: 100%;
+      height: 100%;
+
+      > .slider-wrapper {
+        height: 100%;
+
+        > .slider-container {
+          height: 100%;
+
+          > .slider-element {
+            @include flex-center();
+          }
+        }
+      }
     }
 
     > .popup-close-button {
