Fixed style at sliders in Workstation

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
@@ -48,6 +48,16 @@
 
           > .slider-element {
             @include flex-center();
+
+            > img{
+              width: auto;
+              max-width: 100%;
+              height: auto;
+              vertical-align: middle;
+              object-position: center;
+              object-fit: contain;
+              padding: var( --dm-spacing-primary );
+            }
           }
         }
       }
