--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-workstation-content.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-workstation-content.scss
@@ -29,6 +29,7 @@
       object-position: center;
       object-fit: contain;
       filter: drop-shadow(-9px 5px 7px rgba(0, 0, 0, 0.2));
+      padding: 10%;
     }
     svg {
       padding: 20%;
