--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-post-web-gallery.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-post-web-gallery.scss
@@ -31,7 +31,7 @@
     gap: var( --dm-spacing-secondary );
 
     > .dm-web-gallery-item {
-      @include fix-height(220px);
+      @include fix-height(200px);
       @include flex-center();
       @include border-radius( var( --dm-border-radius-primary ));
       flex-direction: column;
@@ -39,6 +39,11 @@
       position: relative;
       background-color: var( --post_color_primary );
       padding: var( --dm-spacing-primary );
+      background-image: linear-gradient(
+              180deg,
+              rgba(0, 0, 0, 0) 60%,
+              var(--post_color_secondary) 200%
+      );
 
       > .layout {
         position: relative;
@@ -59,23 +64,18 @@
       }
 
       > .bg {
+        opacity: 0.8;
         position: absolute;
-        background-size: cover;
-        background-position: center;
-        height: 120%;
-        width: 120%;
-        opacity: 0.7;
-        mix-blend-mode: multiply;
-        transition: width 0.3s, height 0.3s;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow: hidden;
+        background-repeat: repeat;
       }
 
-      &:hover {
-        > .bg  {
-          height: 140%;
-          width: 140%;
-          transition: width 0.3s, height 0.3s;
-        }
-      }
       &.gallery-item-web {
         > .layout {
           > .screen {
@@ -110,6 +110,7 @@
             height: auto;
             max-width: 100%;
             max-height: 100%;
+            filter: drop-shadow(4px 4px 4px rgba( var( --dm-color-black-rgb ), 0.3));
           }
 
           > .screen {
