--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
@@ -49,7 +49,7 @@
           > .slider-element {
             @include flex-center();
 
-            > img{
+            > img {
               width: auto;
               max-width: 100%;
               height: auto;
@@ -57,6 +57,24 @@
               object-position: center;
               object-fit: contain;
               padding: var( --dm-spacing-primary );
+
+            }
+            &.full-size {
+              overflow: auto;
+              align-items: flex-start;
+
+              > img {
+                transform-origin: unset !important;
+                transform: unset !important;
+                width: 100% !important;
+                height: auto !important;
+                max-height: none !important;
+                max-width: 100% !important;
+                object-fit: unset !important;
+                overflow: auto !important;
+                display: block;
+                padding: 0px !important;
+              }
             }
           }
         }
