Correct Zoom Lvl 4 full size image on desktop screen centered

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-popup.scss
@@ -76,6 +76,8 @@
                 object-fit: unset !important;
                 overflow: auto !important;
                 padding: 0px !important;
+                margin-left: auto !important;
+                margin-right: auto !important;
                 transition: all 0s ease-in-out;
               }
             }
