--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-blog-header.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-blog-header.scss
@@ -36,7 +36,7 @@
         > img {
           min-width: 100%;
           width: 100%;
-          height: auto;
+          height: 100%;
           object-fit: cover;
         }
       }
