--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-blog-posts.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-blog-posts.scss
@@ -36,6 +36,7 @@
           gap: var( --dm-spacing-primary );
 
           > .dm-blog-post-user-logo {
+            @include flex-center();
             @include fix-size(50px);
             @include border-radius(50px);
             border-color: var( --dm-color-white);
@@ -46,8 +47,8 @@
             display: flex;
 
             > img {
-              width: 100%;
-              height: 100%;
+              width: 110%;
+              height: 110%;
             }
           }
           > .dm-blog-post-information {
