Small CSS adjust

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-video-games-list.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-video-games-list.scss
@@ -83,7 +83,7 @@
     bottom: 0px;
     background: linear-gradient(
         to bottom right,
-        rgba(var(--dm-color-primary-rgb), 0.8) 20%,
+        rgba(var(--dm-color-secondary-rgb), 0.7) 20%,
         rgba(var(--dm-color-primary-rgb), 0) 100%
     );
     padding: 6px 9px;
