--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-video-games-list.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-video-games-list.scss
@@ -52,6 +52,9 @@
       --dm-text-heading6-color: var(--dm-color-white);
       --dm-text-heading6-font-weight: 300;
       --dm-text-heading6-line-height: var(--dm-text-heading6-font-size);
+      opacity: 0;
+      transform: rotate(25deg) scale(0.8) translateY(10px);
+      transition: all 0.4s ease-in-out;
     }
   }
   img {
@@ -132,6 +135,13 @@
     .details-box {
       background-color: rgba(var(--dm-color-gray-darken-rgb), 0.3);
       transition: all 0.3s ease-in-out;
+    }
+    .rank {
+      > span {
+        opacity: 1;
+        transform: rotate(0deg) scale(1) translateY(0px);
+        transition: all 0.4s ease-in-out;
+      }
     }
   }
   &[display="false"] {
